deployment/agent-core/agent_core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir-agent-core
  namespace: mimir
  labels:
    app: mimir-agent-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimir-agent-core
  template:
    metadata:
      labels:
        app: mimir-agent-core
    spec:
      containers:
        - name: mimir-agent-core
          image: ghcr.io/csornyei/mimir-api:3.2.0
          imagePullPolicy: IfNotPresent
          args:
            - "uv"
            - "run"
            - "fastapi"
            - "run"
            - "agent_core/main.py"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8000"
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "64Mi"
              cpu: "100m"
          volumeMounts:
            - name: vault-storage
              mountPath: /vault

      volumes:
        - name: vault-storage
          persistentVolumeClaim:
            claimName: mimir-vault-pvc
