deployment/agent-core/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir-agent-svc
  namespace: mimir
spec:
  type: ClusterIP
  selector:
    app: mimir-agent-core
  ports:
    - port: 8000
