deployment/agent-core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-ingress
  namespace: mimir
spec:
  defaultBackend:
    service:
      name: mimir-agent-svc
      port:
        number: 8000
  ingressClassName: tailscale
  tls:
    - hosts:
        - mimir
